fix: give modal z-index to command palette

--- a/src/application/commands/CommandPalette.css
+++ b/src/application/commands/CommandPalette.css
@@ -11,10 +11,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 50;
   width: 100vw;
   height: 100vh;
   user-select: none;
+  @apply z-modals;
   @apply !bg-modal-bg-overlay;
   @apply !bg-opacity-overlay;
 }
